k8s/overlays/stg/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: case-chatguru
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: case-chatguru
          resources:
            requests:
              cpu: "25m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
