k8s/overlays/stg/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: case-chatguru
spec:
  rules:
    - host: stg.case-chatguru.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: case-chatguru
                port:
                  number: 80
